# jobify

./: .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  package-lock.json  pyproject.toml  requirements.dev.txt  requirements.txt
src/: __init__.py  app.py  auth.py  routes.py  secrets.py  utils.py
